Fix overflow text behind icon

--- a/src/components/UI/TextInputTag/index.css
+++ b/src/components/UI/TextInputTag/index.css
@@ -36,6 +36,11 @@
   margin-right: 1rem;
   display: flex;
   align-items: center;
+  z-index: 1;
+}
+
+.textInputWrapper .inputIcon ~ input {
+  padding-right: 50px;
 }
 
 .textInputWrapper.withRightButton {
